# noodle-soup

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  nginx.conf  pg.Dockerfile  setup.sh  shell.nix  test_server.nu
.direnv/: nix-profile-.802491.7c43f080a7f2  nix-profile-.802491.7c43f080a7f2.rc
libnoodle/: Cargo.toml
libnoodle/src/: auth.rs  lib.rs  resources.rs  user.rs
libnoodle/src/auth/: permission.rs
libnoodle/src/auth/permission/: http.rs
libnoodle/src/resources/: branding.rs  content_section.rs  course.rs  file.rs  template.rs
libnoodle_search/: Cargo.toml
noodle-client/: Cargo.toml  build.rs
noodle-client/src/: main.rs
noodle-client/temp-vue-ui/: index.html  package-lock.json  package.json
noodle-client/temp-vue-ui/src/: App.vue  main.js  router.js
noodle-client/ui/: app-window.slint  base-components.slint  base-widgets.slint  button-outline.slint  custom-widgets.slint  noodle-text.slint  search-bar.slint  ui-docs.md
noodle-client/ui/app-views/: login-view.slint
noodle-client/ui/base-components/: drop-down.slint  empty.slint  fa-icon.slint  global-window-size.slint  input-line.slint  tag-bubble.slint  theme-struct.slint  tooltip.slint  ui-button.slint
noodle-client/ui/base-widgets/: course-card.slint  popover.slint
noodle-server/: .env.example  Cargo.toml  docker-entrypoint.sh  endpoints.js  package-lock.json  package.json  test_endpoints.js
noodle-server/src/: main.rs
noodle-server/swagger/: api.yaml
src/: auth.rs  lib.rs  main.rs  user.rs
src/web/db/: setup.sql
swagger/: api.yaml
(+37 files in other folders)
