[package]
name = "noodle-soup"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros"] }
axum-login = "0.17.0"
bcrypt = "0.17.0"
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
time = "0.3.41"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
