[package]
name = "libnoodle"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros"] }
axum-login = "0.17.0"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
mime = "0.3.17"
serde = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
sqlx = { version = "0.8.5", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
